--- a/css/styles.css
+++ b/css/styles.css
@@ -520,6 +520,7 @@ img {
 
 .footer-media {
   display: block;
+  margin-right: 80px;
 }
 .footer-social-list-link {
   display: flex;
@@ -545,6 +546,49 @@ img {
 .footer-social-list-item {
   width: 40px;
   height: 40px;
+}
+
+.footer-subscribe-container {
+  display: block;
+}
+.footer-subscribe {
+  /* padding-left: 16px; */
+}
+.email-input {
+  background-color: var(--accent-color);
+  border: 1px solid #ffffff;
+  border-radius: 4px;
+  /* box-shadow: (0px 4px 4px rgba(0, 0, 0, 0.15); */
+  width: 264px;
+  height: 40px;
+  outline: none;
+  margin-right: 24px;
+}
+
+.email-input::placeholder {
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 2;
+  color: var(--bodycolor);
+  padding-left: 16px;
+  /* position: absolute;
+  top: 50%; */
+  /* display: flex;
+  align-items: center;
+  margin-left: 16px; */
+}
+
+.footer-subscribe-btn {
+  background-color: var(--color);
+  border-radius: 4px;
+  color: var(--bodycolor);
+  width: 165;
+  height: 40px;
+  outline: none;
+  border: none;
+}
+.subscribe-btn-icon {
+  display: flex;
 }
 
 /* ПОРТФОЛІО КНОПКИ */
