--- a/css/styles.css
+++ b/css/styles.css
@@ -552,7 +552,7 @@ img {
   display: block;
 }
 .footer-subscribe {
-  /* padding-left: 16px; */
+  display: flex;
 }
 .email-input {
   background-color: var(--accent-color);
@@ -563,6 +563,7 @@ img {
   height: 40px;
   outline: none;
   margin-right: 24px;
+  color: var(--bodycolor);
 }
 
 .email-input::placeholder {
@@ -579,16 +580,26 @@ img {
 }
 
 .footer-subscribe-btn {
+  display: flex;
   background-color: var(--color);
+  justify-content: center;
+  align-items: center;
+  padding: 8px 24px;
+  gap: 16px;
+  /* background-color: var(--color); */
   border-radius: 4px;
   color: var(--bodycolor);
-  width: 165;
+  width: 165px;
   height: 40px;
   outline: none;
   border: none;
 }
-.subscribe-btn-icon {
+.subscribe-btn {
   display: flex;
+}
+
+.subscribe-btn-icon {
+  /* transform: translateY(-50%); */
 }
 
 /* ПОРТФОЛІО КНОПКИ */
@@ -710,6 +721,7 @@ img {
 }
 
 /* BACKDROP */
+/* МОДАЛЬНЕ ВІКНО */
 
 .backdrop {
   position: fixed;
@@ -734,7 +746,10 @@ img {
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  /* transform: scale(1.5); */
+  padding-left: 24px;
+  padding-right: 24px;
+  padding-bottom: 24px;
+  padding-top: 72px;
 }
 
 .backdrop-modal-btn {
@@ -770,4 +785,70 @@ img {
   opacity: 0;
   visibility: hidden;
   pointer-events: none;
+}
+
+.contact-form-header {
+  display: block;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  text-align: center;
+  letter-spacing: 0.02em;
+  color: var(--accent-color);
+  width: 100%;
+  margin-bottom: 16px;
+}
+.contact-form-field-wrapper {
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.17;
+  /* letter-spacing: 0.04em; */
+  color: var(--light-slate-color);
+  margin-bottom: 4px;
+}
+.contact-form-field {
+  width: 100%;
+  height: 40px;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  border-radius: 4px;
+  margin-bottom: 8px;
+  padding: 0;
+}
+
+.contact-form-comment {
+  width: 100%;
+  height: 120px;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  border-radius: 4px;
+  margin-bottom: 8px;
+  padding: 0;
+  resize: none;
+  display: block;
+}
+
+.contact-form-comment::placeholder {
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 14px;
+  letter-spacing: 0.04em;
+  color: rgba(46, 47, 66, 0.4);
+  padding-top: 8px;
+  padding-left: 16px;
+  /* transform: translate(16px, 8px); */
+  /* transform: translateY(8px); */
+  /* left: 16px; */
+  /* top: 8px;
+  transform: translateY(8px);
+  /* transform: translateX(16px); */
+}
+
+.agreement-text {
+  display: block;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  color: var(--light-slate-color);
+  /* padding-left: 48px;
+  padding-right: 22px; */
 }
