--- a/css/styles.css
+++ b/css/styles.css
@@ -586,20 +586,22 @@ img {
   align-items: center;
   padding: 8px 24px;
   gap: 16px;
-  /* background-color: var(--color); */
   border-radius: 4px;
   color: var(--bodycolor);
   width: 165px;
   height: 40px;
   outline: none;
   border: none;
-}
-.subscribe-btn {
-  display: flex;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.subscribe-btn-icon {
-  /* transform: translateY(-50%); */
+.footer-subscribe-btn:hover,
+.footer-subscribe-btn:focus {
+  background-color: var(--ocean-color);
+}
+
+.subscribe-btn {
+  display: flex;
 }
 
 /* ПОРТФОЛІО КНОПКИ */
@@ -789,12 +791,12 @@ img {
 
 .contact-form-header {
   display: block;
+  color: var(--accent-color);
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
   text-align: center;
   letter-spacing: 0.02em;
-  color: var(--accent-color);
   width: 100%;
   margin-bottom: 16px;
 }
@@ -802,17 +804,55 @@ img {
   font-weight: 400;
   font-size: 12px;
   line-height: 1.17;
-  /* letter-spacing: 0.04em; */
+  letter-spacing: 0.01em;
   color: var(--light-slate-color);
   margin-bottom: 4px;
 }
+
+.contact-form-field-name {
+  letter-spacing: 0.04em;
+}
+
+.form-wrapper {
+  position: relative;
+}
+
+.contact-form-item {
+  display: block;
+  position: relative;
+}
+
+.contact-form-field:hover + .form-field-icon,
+.contact-form-field:focus + .form-field-icon {
+  fill: var(--ocean-color);
+}
+
 .contact-form-field {
+  display: block;
+  /* position: absolute; */
   width: 100%;
   height: 40px;
   border: 1px solid rgba(46, 47, 66, 0.4);
   border-radius: 4px;
   margin-bottom: 8px;
-  padding: 0;
+  padding: 0 0 0 38px;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.contact-form-field:hover,
+.contact-form-field:focus {
+  border-color: var(--color);
+  outline: none;
+}
+
+.form-field-icon {
+  position: absolute;
+  left: 16px;
+  top: 0;
+  transform: translateY(8px);
+  fill: var(--accent-color);
+  padding-top: 3px;
+  padding-bottom: 3px;
 }
 
 .contact-form-comment {
@@ -821,9 +861,16 @@ img {
   border: 1px solid rgba(46, 47, 66, 0.4);
   border-radius: 4px;
   margin-bottom: 8px;
-  padding: 0;
+  padding: 8px 0 0 16px;
   resize: none;
   display: block;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.contact-form-comment:hover,
+.contact-form-comment:focus {
+  outline: none;
+  border-color: var(--color);
 }
 
 .contact-form-comment::placeholder {
@@ -832,8 +879,8 @@ img {
   line-height: 14px;
   letter-spacing: 0.04em;
   color: rgba(46, 47, 66, 0.4);
-  padding-top: 8px;
-  padding-left: 16px;
+  /* padding-top: 8px; */
+  /* padding-left: 16px; */
   /* transform: translate(16px, 8px); */
   /* transform: translateY(8px); */
   /* left: 16px; */
@@ -842,13 +889,57 @@ img {
   /* transform: translateX(16px); */
 }
 
-.agreement-text {
-  display: block;
+.agreement-checkbox {
+  margin-right: 8px;
+  width: 16px;
+  height: 16px;
+}
+
+.agreement-label {
+  display: flex;
+  margin-bottom: 24px;
+  align-items: center;
   font-weight: 400;
   font-size: 12px;
   line-height: 1.17;
   letter-spacing: 0.04em;
   color: var(--light-slate-color);
+}
+
+.agreement-text {
+  display: flex;
+  /* align-items: center;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  color: var(--light-slate-color); */
   /* padding-left: 48px;
   padding-right: 22px; */
+}
+
+.privacy-policy-link {
+  margin-left: 3px;
+  color: var(--color);
+}
+
+.form-submit-btn {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 169px;
+  height: 56px;
+  padding: 16px 32px;
+  background-color: var(--color);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  outline: none;
+  border: none;
+  color: var(--bodycolor);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.form-submit-btn:hover,
+.form-submit-btn:focus {
+  background-color: var(--ocean-color);
 }
