--- a/css/styles.css
+++ b/css/styles.css
@@ -479,7 +479,7 @@ img {
   /* width: 1128px; */
 }
 
-/* FOOTER */
+/*---------- FOOTER -------------*/
 
 .main-footer {
   background-color: var(--accent-color);
@@ -554,29 +554,28 @@ img {
 .footer-subscribe {
   display: flex;
 }
+
+.footer-subscribe-label {
+  margin-right: 24px;
+}
 .email-input {
-  background-color: var(--accent-color);
+  background-color: transparent;
   border: 1px solid #ffffff;
   border-radius: 4px;
-  /* box-shadow: (0px 4px 4px rgba(0, 0, 0, 0.15); */
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   width: 264px;
   height: 40px;
   outline: none;
-  margin-right: 24px;
   color: var(--bodycolor);
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  padding-left: 16px;
 }
 
 .email-input::placeholder {
-  font-weight: 400;
-  font-size: 12px;
-  line-height: 2;
   color: var(--bodycolor);
-  padding-left: 16px;
-  /* position: absolute;
-  top: 50%; */
-  /* display: flex;
-  align-items: center;
-  margin-left: 16px; */
 }
 
 .footer-subscribe-btn {
@@ -585,14 +584,21 @@ img {
   justify-content: center;
   align-items: center;
   padding: 8px 24px;
-  gap: 16px;
+  /* gap: 16px; */
   border-radius: 4px;
   color: var(--bodycolor);
-  width: 165px;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  min-width: 165px;
   height: 40px;
   outline: none;
   border: none;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.subscribe-btn-icon {
+  margin-left: 16px;
 }
 
 .footer-subscribe-btn:hover,
@@ -604,7 +610,7 @@ img {
   display: flex;
 }
 
-/* ПОРТФОЛІО КНОПКИ */
+/*---------- ПОРТФОЛІО КНОПКИ--------- */
 
 .portfolio-section {
   padding-top: 96px;
@@ -801,24 +807,22 @@ img {
   margin-bottom: 16px;
 }
 .contact-form-field-wrapper {
+  display: block;
   font-weight: 400;
   font-size: 12px;
   line-height: 1.17;
-  letter-spacing: 0.01em;
+  letter-spacing: 0.04em;
   color: var(--light-slate-color);
   margin-bottom: 4px;
 }
 
-.contact-form-field-name {
-  letter-spacing: 0.04em;
-}
-
 .form-wrapper {
   position: relative;
+  margin-bottom: 8px;
 }
 
 .contact-form-item {
-  display: block;
+  /* display: block; */
   position: relative;
 }
 
@@ -832,47 +836,66 @@ img {
   /* position: absolute; */
   width: 100%;
   height: 40px;
-  border: 1px solid rgba(46, 47, 66, 0.4);
+  border: 1px solid rgba(46, 47, 66, 0.2);
   border-radius: 4px;
-  margin-bottom: 8px;
-  padding: 0 0 0 38px;
+  background-color: transparent;
+  outline: transparent;
+  padding-left: 38px;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .contact-form-field:hover,
 .contact-form-field:focus {
   border-color: var(--color);
-  outline: none;
+  /* outline: none; */
 }
 
 .form-field-icon {
   position: absolute;
   left: 16px;
-  top: 0;
-  transform: translateY(8px);
+  top: 50%;
+  transform: translateY(-50%);
   fill: var(--accent-color);
   padding-top: 3px;
   padding-bottom: 3px;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+/* .form-field-icon:focus {
+  fill: var(--color);
+} */
+
+/* ------contact-form-comment------ */
+
+.comment-wrapper {
+  margin-bottom: 16px;
 }
 
 .contact-form-comment {
   width: 100%;
   height: 120px;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 14px;
+  letter-spacing: 0.04em;
+  color: rgba(46, 47, 66, 0.4);
   border: 1px solid rgba(46, 47, 66, 0.4);
   border-radius: 4px;
   margin-bottom: 8px;
-  padding: 8px 0 0 16px;
   resize: none;
   display: block;
+  padding: 8px 16px;
+  outline: transparent;
+  background-color: transparent;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .contact-form-comment:hover,
 .contact-form-comment:focus {
-  outline: none;
+  /* outline: none; */
   border-color: var(--color);
 }
-
+/* 
 .contact-form-comment::placeholder {
   font-weight: 400;
   font-size: 12px;
@@ -880,20 +903,23 @@ img {
   letter-spacing: 0.04em;
   color: rgba(46, 47, 66, 0.4);
   /* padding-top: 8px; */
-  /* padding-left: 16px; */
-  /* transform: translate(16px, 8px); */
-  /* transform: translateY(8px); */
-  /* left: 16px; */
-  /* top: 8px;
+/* padding-left: 16px; */
+/* transform: translate(16px, 8px); */
+/* transform: translateY(8px); */
+/* left: 16px; */
+/* top: 8px;
   transform: translateY(8px);
   /* transform: translateX(16px); */
-}
+*/
 
 /* --------- Privacy Policy---------- */
 
+.agreement-wrapper {
+  margin-bottom: 24px;
+}
+
 .agreement-label {
   display: flex;
-  margin-bottom: 24px;
   align-items: center;
   font-weight: 400;
   font-size: 12px;
@@ -903,19 +929,40 @@ img {
 }
 
 .agreement-checkbox {
-  appearance: none;
+  /* appearance: none; */
+  /* display: block; */
   position: absolute;
+  /* margin-right: 8px; */
+}
+
+.agreement-checkbox-wrap {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  fill: transparent;
+  width: 16px;
+  height: 16px;
+  border: 1px solid var(--ocean-color);
+  border-radius: 2px;
+  margin-right: 8px;
 }
 
 .agreement-custom-checkbox {
-  border: 1px solid var(--ocean-color);
-  border-radius: 2px;
+  /* border: 1px solid var(--ocean-color);
+  border-radius: 2px; */
   margin-right: 8px;
   cursor: pointer;
 }
 
 .agreement-icon {
   opacity: 0;
+}
+
+.agreement-checkbox:checked + .agreement-label > .agreement-checkbox-wrap {
+  background-color: #404bbf;
+  border: none;
+  fill: var(--bodycolor);
+  border-color: var(--ocean-color);
 }
 
 .agreement-checkbox:checked + .agreement-custom-checkbox > .agreement-icon {
@@ -945,8 +992,12 @@ img {
   display: block;
   margin-left: auto;
   margin-right: auto;
-  width: 169px;
+  min-width: 169px;
   height: 56px;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
   padding: 16px 32px;
   background-color: var(--color);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
@@ -954,6 +1005,7 @@ img {
   outline: none;
   border: none;
   color: var(--bodycolor);
+  cursor: pointer;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
