--- a/css/styles.css
+++ b/css/styles.css
@@ -605,10 +605,10 @@ img {
 .footer-subscribe-btn:focus {
   background-color: var(--ocean-color);
 }
-
+/* 
 .subscribe-btn {
   display: flex;
-}
+} */
 
 /*---------- ПОРТФОЛІО КНОПКИ--------- */
 
@@ -795,6 +795,9 @@ img {
   pointer-events: none;
 }
 
+/* .contact-form-wrapper {
+  display: inline-block;
+} */
 .contact-form-header {
   display: block;
   color: var(--accent-color);
@@ -836,7 +839,7 @@ img {
   /* position: absolute; */
   width: 100%;
   height: 40px;
-  border: 1px solid rgba(46, 47, 66, 0.2);
+  border: 1px solid rgba(46, 47, 66, 0.4);
   border-radius: 4px;
   background-color: transparent;
   outline: transparent;
@@ -861,9 +864,9 @@ img {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-/* .form-field-icon:focus {
+.form-field-icon:focus + .form-field-icon {
   fill: var(--color);
-} */
+}
 
 /* ------contact-form-comment------ */
 
@@ -876,10 +879,10 @@ img {
   height: 120px;
   font-weight: 400;
   font-size: 12px;
-  line-height: 14px;
+  line-height: 1.17;
   letter-spacing: 0.04em;
   color: rgba(46, 47, 66, 0.4);
-  border: 1px solid rgba(46, 47, 66, 0.4);
+  border: 1px solid rgba(46, 47, 66, 0.2);
   border-radius: 4px;
   margin-bottom: 8px;
   resize: none;
@@ -919,7 +922,7 @@ img {
 }
 
 .agreement-label {
-  display: flex;
+  /* display: flex; */
   align-items: center;
   font-weight: 400;
   font-size: 12px;
@@ -929,10 +932,7 @@ img {
 }
 
 .agreement-checkbox {
-  /* appearance: none; */
-  /* display: block; */
   position: absolute;
-  /* margin-right: 8px; */
 }
 
 .agreement-checkbox-wrap {
@@ -942,7 +942,7 @@ img {
   fill: transparent;
   width: 16px;
   height: 16px;
-  border: 1px solid var(--ocean-color);
+  border: 1px solid rgba(46, 47, 66, 0.4);
   border-radius: 2px;
   margin-right: 8px;
 }
